--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">click me!!</a>
+
+    <a href="aboutme.html">Homepage</a>
+
+    <img src="images/charles-deluvio-Mv9hjnEUHR4-unsplash.jpg" alt="dog">
 </body>
 </html>
